auto format/cleanup